--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "itmo-big-data-lab1"
+name = "src"
 version = "0.1.0"
 description = "Template for MLE project"
 authors = ["Alexey <porsh-5@yandex.ru>"]
@@ -7,6 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+pandas = "^2.2.1"
+scikit-learn = "^1.4.1.post1"
 
 
 [build-system]
