--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 pandas = "^2.2.1"
 scikit-learn = "^1.4.1.post1"
 pydantic = "^2.6.4"
+textblob = "^0.18.0.post0"
 
 
 [build-system]
