--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pandas = "^2.2.1"
 scikit-learn = "^1.4.1.post1"
 pydantic = "^2.6.4"
 textblob = "^0.18.0.post0"
+pyyaml = "^6.0.1"
 
 
 [build-system]
