--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ scikit-learn = "^1.4.1.post1"
 pydantic = "^2.6.4"
 textblob = "^0.18.0.post0"
 pyyaml = "^6.0.1"
+loguru = "^0.7.2"
 
 
 [build-system]
