--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ textblob = "^0.18.0.post0"
 pyyaml = "^6.0.1"
 loguru = "^0.7.2"
 pytest = "^8.1.1"
+fastapi = "^0.110.1"
+requests = "^2.31.0"
+uvicorn = "^0.29.0"
+configparser = "^6.0.1"
 
 
 [build-system]
