--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,14 +28,8 @@ jobs:
     needs: build-and-push
     runs-on: ubuntu-latest
     steps:
-    - name: Run functional tests
-      run: poetry run pytest src/unit_tests
-  functional-tests:
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    steps:
     - name: Build Docker image
-      run: docker build -t mle-big_data_app:latest .
+      run: docker pull myashka/big_data_app:latest
 
     - name: Run Docker container
       run: docker run -d --name big_data_container -p 8001:8001 big_data_app:latest
