--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,11 +28,11 @@ jobs:
     needs: build-and-push
     runs-on: ubuntu-latest
     steps:
-    - name: Build Docker image
+    - name: Pull Docker image
       run: docker pull myashka/big_data_app:latest
 
     - name: Run Docker container
-      run: docker run -d --name big_data_container -p 8001:8001 big_data_app:latest
+      run: docker run -d --name big_data_container -p 8001:8001 myashka/big_data_app:latest
 
     - name: Execute tests inside Docker container
       run: docker exec big_data_container poetry run pytest src/unit_tests
