--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,11 +34,11 @@ jobs:
     - name: Pull Docker image
       run: docker pull myashka/big_data_app:latest
 
-    - name: Run Docker container
-      run: docker run -d --name big_data_container -p 8001:8001 myashka/big_data_app:latest
+    - name: Run Docker container (without starting FastAPI)
+      run: docker run -d --name big_data_container myashka/big_data_app:latest tail -f /dev/null
 
     - name: Execute tests inside Docker container
-      run: docker exec big_data_container poetry run pytest src/unit_tests/test_preprocessor.py
+      run: docker exec big_data_container poetry run pytest src/unit_tests/
 
     - name: Stop and remove Docker container
       if: always()
