--- a/configs/exp/exp_3.yaml
+++ b/configs/exp/exp_3.yaml
@@ -9,7 +9,7 @@ test_y_csv_path: "data/processed/y_test.csv"
 
 preprocessing_config:
   use_normalization: true
-  use_lemmatization: false
+  use_lemmatization: true
 classifier_config:
   n_estimators: 100
   max_depth: null
