--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   workflow_run:
     workflows: ["CI"]
-    branches: [ main ]
+    branches: [main, dev]
     types:
       - completed
 
@@ -14,6 +14,10 @@ jobs:
       MEMORY_LIMIT_MB: 4096
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v4
+      with:
+        lfs: true
+
     - name: Pull Docker image
       run: docker pull myashka/big_data_app:latest
 
