--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,6 +17,9 @@ jobs:
     - uses: actions/checkout@v4
       with:
         lfs: true
+    
+    - name: Pull lfs
+      run: docker exec git lfs pull
 
     - name: Pull Docker image
       run: docker pull myashka/big_data_app:latest
