--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,10 @@ jobs:
     - uses: actions/checkout@v4
       with:
         lfs: true
-        
+    
+    - name: Pull lfs
+      run: git lfs pull
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
