--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,11 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: nschloe/action-cached-lfs-checkout@v1
+    - uses: actions/checkout@v4
+      with:
+        lfs: true
+
+    - run: git lfs pull
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -25,6 +28,7 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
+        context: .
         push: true
         tags: myashka/big_data_app:latest
         no-cache: true
